2007-12-06  Benjamin Mack  <mack@xnos.org>

	* (bugfix) Fixed #1678: limit to language; still can delete and move content element (Thanks to Helmut Hummel)

2007-12-05  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed problems with language files in new installer (typo3/sysext/install)
	* Fixed bug #6903: Translated language files are not loaded
	* Fixed bug #6703: $TCA[table]['ctrl']['hideTable'] not implemented
	* Fixed bug #6888: Disabling some or all controls in "group" field

2007-12-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #6844: DB compare fails

2007-12-04  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #6114: t3lib_extMgm::addToAllTCATypes ignores type 0
	
2007-12-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #6727: Fatal error install tool

2007-12-03  Benjamin Mack  <mack@xnos.org>

	* (cleanup) Fixed #6823: Removed "Disable RTE" checkbox in alt_doc.php

2007-12-02  Dmitry Dulepov  <dmitry@typo3.org>

	* Changed "Clear cache" string to start with upper-case

2007-12-02  Ingo Renner	<ingo@typo3.org>

	* added feature #6868: Enable labels for EM extension configuration, credits Georg Ringer

2007-12-02  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #6663: Unserialized objects not debugged properly (by Francois Suter)
	* Minor change to tsconfig_help sysext (by Francois Suter)
	* Issue #6873: Added icon for pages marked as not in menu and with FE-user access restriction to t3skin (by Francois Suter)

2007-11-30  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5602: spamProtectEmailAddresses_atSubst is not recognized correctly

2007-11-30  Ingo Renner	<ingo@typo3.org>

	* added positioning function for the clear cache menu which is needed to keep the menu below it's icon when new items are added to the toolbar
	* added backend search toolbar item to backend.php

2007-11-29  Benjamin Mack  <mack@xnos.org>

	* (feature) #6833: Possibility to add inline JS to page (Thanks to Steffen Kamper)