@@ -1,3 +1,7 @@
+2007-12-10  Ingmar Schlecht  <ingmar@typo3.org>
+
+        * (security) Fixed a low-severity SQL injection in the modfunc2 of indexed_search (only exploitable by BE users, and severity limited because addslashes() was already applied to the value - yet not within a quoted string) (Thanks to Henning Pingel for findind the issue and Andreas Otto for the fix)
+
 2007-12-06  Benjamin Mack  <mack@xnos.org>
 
 	* (bugfix) Fixed #1678: limit to language; still can delete and move content element (Thanks to Helmut Hummel)
